--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "git-commit-msg-linter": "^5.0.8",
     "prettier": "^3.0.0-alpha.6",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
