--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
@@ -28,7 +29,9 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "git-commit-msg-linter": "^5.0.8",
     "husky": "^9.1.1",
+    "postcss": "^8.4.39",
     "prettier": "^3.0.0-alpha.6",
+    "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
