--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
